Fixed horizontal scrollbar issue

--- a/src/components/Admin/Calendar/calendar.scss
+++ b/src/components/Admin/Calendar/calendar.scss
@@ -39,7 +39,7 @@
 
       .day {
         height: 8em;
-        padding-top: 1.5em;
+        padding-top: 1.6em;
         position: relative;
         $pad-h: 0.25em;
         padding-right: $pad-h;
@@ -54,23 +54,20 @@
           width: 100%;
           text-align: right;
           padding-right: 0.5em;
-
-          &:hover {
-            background-color: rgb(127, 255, 212);
-          }
         }
 
         .event-list {
-          overflow: scroll;
+          overflow-y: scroll;
           height: 100%;
           width: 100%;
 
           .event {
             font-size: 0.8em;
-            background-color: rgba(202, 0, 0, 0.699);
-            border-radius: 4px;
+            background-color: rgb(255, 154, 136);
             margin: 1px 0;
             z-index: 4;
+            text-align: left;
+            padding-left: 0.25em;
           }
         }
       }
